--- a/Project/selectPage.xaml
+++ b/Project/selectPage.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="Project.MainWindow"
+﻿<Window x:Class="Project.selectPage"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -18,17 +18,11 @@
             <Image x:Name="schoolPNG" Height="115" Source="images/schoolImage.png" Stretch="Fill" Width="115" Cursor="Hand"/>
 
         </Button>
-        <StackPanel>
-            <Button x:Name="schoolButton2" HorizontalAlignment="Left" Margin="561,281,0,0" Click="Button_Click"  VerticalAlignment="Top" Width="120" Height="123" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" BorderThickness="0" ClickMode="Press" Cursor="Hand">
-                <Image x:Name="egePNG"  Source="images/egeImage.png" Stretch="Fill"/>
-            </Button>
-        </StackPanel>
+        <Button x:Name="schoolButton2" HorizontalAlignment="Left" Margin="561,281,0,0" Click="Button_Click"  VerticalAlignment="Top" Width="120" Height="123" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" BorderThickness="0" ClickMode="Press" Cursor="Hand">
+            <Image x:Name="egePNG"  Source="images/egeImage.png" Stretch="Fill"/>
+        </Button>
 
-        <StackPanel>
-            <TextBlock Text="Hello from  Page1" />
-            <Button Click="Button_Click" Content="Navigate to page 2"></Button>
-        </StackPanel>
-        
+
         <Button x:Name="schoolButton3" HorizontalAlignment="Left" Margin="765,281,0,0" VerticalAlignment="Top" Width="120" Height="123" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" BorderThickness="0" ClickMode="Press" Cursor="Hand">
             <Image x:Name="olympPNG"  Source="images/olympImage.png" Stretch="Fill" />
         </Button>
