--- a/Project/pages/egePage.xaml
+++ b/Project/pages/egePage.xaml
@@ -1,12 +1,57 @@
-﻿<Window x:Class="Project.egePage"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Project"
+        xmlns:local1="clr-namespace:Project;assembly=Project" x:Class="Project.egePage"
         mc:Ignorable="d"
         Title="Электронное пособие по математике - ЕГЭ 2017 " Height="768" Width="1280" ResizeMode="NoResize">
-        <Grid   Background="#FF1E6D74" Width="1280" Height="768">
+    <Window.Resources>
+        <Style TargetType="{x:Type Button}">
+            <Setter Property="RenderTransformOrigin" Value="0.5, 0.5"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border x:Name="brdr" TextBlock.Foreground="{TemplateBinding Foreground}" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}">
+                            <ContentPresenter HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}" VerticalAlignment="{TemplateBinding VerticalContentAlignment}" Content="{TemplateBinding Content}" />
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+            <Setter Property="Background" Value="{DynamicResource {x:Static SystemColors.ControlBrushKey}}"/>
+            <Style.Triggers>
+                <Trigger Property="IsPressed" Value="True">
+                    <Setter Property="RenderTransform">
+                        <Setter.Value>
+                            <ScaleTransform ScaleX="0.85" ScaleY="0.85"/>
+                        </Setter.Value>
+                    </Setter>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
+    <Grid   Background="#FF1E6D74" Width="1280" Height="768">
 
-        </Grid>
+        <Rectangle Fill="#015C65" HorizontalAlignment="Left" Height="130" VerticalAlignment="Top" Width="1280" Opacity="0.90" Margin="0,-5,0,0">
+            <Rectangle.Effect>
+                <DropShadowEffect BlurRadius="20" RenderingBias="Quality"/>
+            </Rectangle.Effect>
+        </Rectangle>
+
+        <Button x:Name="egeButtonPrev" HorizontalAlignment="Left" Margin="22,1,0,0" Click="previousButton"  VerticalAlignment="Top" Width="108" Height="111" Foreground="{x:Null}" BorderBrush="{x:Null}" Background="{x:Null}" BorderThickness="0" ClickMode="Press" Cursor="Hand">
+            <Image Source="../images/egeImage.png" Stretch="Fill" Height="101" Width="99"/>
+        </Button>
+        <Label Content="ЕГЭ 2017"  HorizontalAlignment="CENTER"  Height="24" Margin="46,101,1174,0" VerticalAlignment="Top" Width="60" Foreground="White"/>
+
+        <Button Content="Б" HorizontalAlignment="Left" Margin="150,10,0,0" VerticalAlignment="Top" Width="44" Height="44" BorderThickness="1" FontSize="30" Background="#FF028E9B" BorderBrush="{x:Null}" Foreground="White" Cursor="Hand"/>
+        <Button Content="П" HorizontalAlignment="Left" Margin="150,61,0,0" VerticalAlignment="Top" Width="44" Height="44" FontSize="30" BorderThickness="0" Background="#FF028E9B" BorderBrush="{x:Null}" Foreground="White" Cursor="Hand"/>
+        <ComboBox HorizontalAlignment="Left" Margin="238,10,0,0" VerticalAlignment="Top" Width="168">
+            <MenuItem Header="ПОЗИЦИЯ"/>
+            <MenuItem Header="ВАРИАНТ"/>
+        </ComboBox>
+
+
+
+    </Grid>
 </Window>
