--- a/Project/pages/selectPage.xaml
+++ b/Project/pages/selectPage.xaml
@@ -8,7 +8,12 @@
         Title="Электронное пособие по математике" Height="768" Width="1280" ResizeMode="NoResize">
 
     <Grid Background="#FF1E6D74" Width="1280" Height="768">
-        <Rectangle Fill="#015C65" HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="1280"/>
+        
+        <Rectangle Fill="#015C65" HorizontalAlignment="Left" Height="100" VerticalAlignment="Top" Width="1280" Opacity="0.90" Margin="-4,0,0,0">
+            <Rectangle.Effect>
+                <DropShadowEffect BlurRadius="20" RenderingBias="Quality"/>
+            </Rectangle.Effect>
+        </Rectangle>
 
         <Label x:Name="firstLabel" Content="  ЭЛЕКТРОННОЕ ПОСОБИЕ ПО МАТЕМАТИКЕ" HorizontalAlignment="Left" VerticalAlignment="Top" Height="45" Width="529" FontFamily="Segoe UI Black" Margin="356,49,0,0" Foreground="White" FontSize="22"/>
         <Label x:Name="secondLabel" Content=" СПРАВОЧНО-ОБУЧАЮЩЕЕ" HorizontalAlignment="Left" VerticalAlignment="Top" Height="44" Width="333" FontFamily="Segoe UI Black" Margin="458,18,0,0" Foreground="White" FontSize="22"/>
@@ -29,7 +34,7 @@
 
         <Label x:Name="schoolText" Content=" ШКОЛЬНЫЙ КУРС" HorizontalAlignment="Left" Margin="356,405,0,0" VerticalAlignment="Top" Width="120" FontFamily="Segoe UI Semibold" FontSize="12" Height="25"/>
         <Label x:Name="egeText" Content="ЕГЭ 2017" HorizontalAlignment="Left" Margin="591,404,0,0" VerticalAlignment="Top" FontFamily="Segoe UI Semibold" FontSize="12"/>
-        <Label x:Name="olympText" Content="ОЛИМПИАДА" HorizontalAlignment="Left" Margin="781,404,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.482,0.385" FontFamily="Segoe UI Semibold" FontSize="12"/>
+        <Label x:Name="olympText" Content="ОЛИМПИАДЫ" HorizontalAlignment="Left" Margin="781,404,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.482,0.385" FontFamily="Segoe UI Semibold" FontSize="12"/>
     </Grid>
 
 
